resourcesdir = $(prefix)/games/$(PACKAGE)/resources
resources_DATA = backgroundgameover.png armario.png backgroundinitscreen.png backgroundpausescreen.png box.png enemy_sprites.png exitbutton.png HanaleiRegular.ttf init_screen.wav jack_sprites.png level_1 level_1.png Logo_WareHouse_64x64.png optionsbutton.png startbutton.png
