resourcesdir = $(prefix)/games/$(PACKAGE)/resources
resources_DATA = backgroundgameover.png armario.png backgroundinitscreen.png backgroundpausescreen.png backgroundoptionsscreen.png box.png enemy_sprites.png exitbutton.png HanaleiRegular.ttf init_screen.wav jack_sprites.png level_1 level_1.png Logo_WareHouse_64x64.png optionsbutton.png startbutton.png mutebutton.png loadbutton.png backbutton.png backgroundwonscreen.png level_2.png level_3.png Comfortaa.ttf helpTextImage.png level_1.wav level_2.wav level_3.wav level_2 level_3
