#Binaries
bin_PROGRAMS = jackthejanitor

#Program description
jackthejanitor_SOURCES = main.cpp game.cpp jack.cpp box.cpp level.cpp sdlutil.cpp gameobject.cpp enemy.cpp timer.cpp rawimage.cpp #resourcesmanager.cpp

#Libraries needed
jackthejanitor_LDADD = -lSDL -lSDL_image

#Include flags
AM_CPPFLAGS = -I../include -Wall -W -pedantic -ansi
